<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall_e"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/result_reversi" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:background="@drawable/border_datelogtitle"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/date_time_text"
            android:textColor="@color/WHITE"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/date_and_time"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:background="@drawable/border_datelogtext"
            android:inputType="text"
            android:focusable="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="10dp"></LinearLayout>

    <LinearLayout
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:background="@drawable/border_valueslogtitle"
        android:orientation="vertical"
        android:layout_weight="0.16">

        <EditText
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/log_values"
            android:textColor="@color/WHITE"
            android:textStyle="bold"
            android:focusable="false"/>

        <TextView
            android:id="@+id/log"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:background="@drawable/border_valueslogtext"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="10dp"></LinearLayout>

    <LinearLayout
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:background="@drawable/border_aliastitle"
        android:orientation="vertical"
        android:layout_weight="0.15">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/email_text"
            android:textColor="@color/WHITE"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:background="@drawable/border_aliastext"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="5dp"></LinearLayout>
    <Button
        android:id="@+id/button5"
        android:layout_width="91dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:onClick="sendMail"
        android:background="@drawable/button_send"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="5dp"></LinearLayout>

    <Button
        android:id="@+id/button6"
        android:layout_width="91dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:onClick="onBackClick"
        android:background="@drawable/button_newgame"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="5dp"></LinearLayout>

    <Button
        android:id="@+id/button7"
        android:layout_width="91dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_exit"
        android:onClick="onExitClick" />

</LinearLayout>

